# palmerpenguins

./: .gitignore  DESCRIPTION.rst  LICENSE  MANIFEST.in  pyproject.toml  pyrightconfig.json  readme.md  requirements  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
notebooks/: example.ipynb
palmerpenguins/: __init__.py  _base.py  penguins.py
tests/: test_penguins.py
